<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_pink_300"
    tools:context="bapspatil.wallcards.ui.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/md_pink_500"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_home">
            <ImageView
                android:id="@+id/image_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logout"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:src="@drawable/ic_exit_to_app_white_24dp"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/text_greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:maxLines="5"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:text="@string/hey_there"
                android:textColor="@color/md_white_1000"
                android:textSize="56sp"
                android:textStyle="bold"
                app:minTextSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_popular"
                    style="@style/HomeButtonsStyle"
                    android:text="@string/popular"/>

                <Button
                    android:id="@+id/button_curated"
                    style="@style/HomeButtonsStyle"
                    android:text="@string/curated"/>

                <Button
                    android:id="@+id/button_favorites"
                    style="@style/HomeButtonsStyle"
                    android:text="@string/favorites"/>
            </LinearLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>
